--- a/report.org
+++ b/report.org
@@ -5,7 +5,7 @@
 
   - mapreduce.py :: $ ./mapreduce.py <number_of_threads>
     
-  - mapreduce_auto.py :: ./mapreduce.py # Omits the output of the count
+  - mapreduce_auto.py :: $ ./mapreduce.py # Omits the output of the count
     function for brevity
 
 * Report
